@@ -13,3 +13,4 @@ John Gatewood Ham <buraphalinuxserver@gmail.com>
 Artur Barashev <artvbar@gmail.com>
 Gregor Riepl <seto-kun@freesurf.ch>
 Iliyan Peychev <iliyan.peychev@gmail.com>
+Francois Pesce <francois.pesce@gmail.com>
